# mtl-mailchimp-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mtl_mailchimp_mcp/: __init__.py  __main__.py  mailchimp.py  server.py
tests/: test_smoke.py
